syntax = "proto3";

package urlshortener;

option go_package="proto/urlshortenerpb";

message CreateURLRequest {
    string url = 1;
}
message GetURLRequest {
    string URL = 1;
}
message ShortenedURL {
    string originalURL = 1;
    string shortenedURL = 2;
    int32  clicks = 3;
}
message Response {
    string message = 1;
    string status = 2;
    ShortenedURL url = 3;
}

service URLShortenerService {
    rpc CreateURL(CreateURLRequest) returns (Response){}
    rpc GetURL(GetURLRequest) returns (Response){}
}
